# konanai

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
docs/: CMakeLists.txt  Doxyfile
kai/: CMakeLists.txt  kai.sln
kai/kai_engine/: CMakeLists.txt  kai_engine.vcxproj  kai_engine.vcxproj.filters
kai/kai_engine/src/api/: kai_api_array.cpp  kai_api_common.h  kai_api_component.cpp  kai_api_dataset.cpp  kai_api_expression.cpp  kai_api_layer.cpp  kai_api_library.cpp  kai_api_model.cpp  kai_api_model_instance.cpp  kai_api_network.cpp  kai_api_optimizer.cpp  kai_api_shell.cpp
kai/kai_engine/src/components/: component.cpp  component.h  component_info.cpp  component_info.h  kdataloader.cpp  kdataloader.h  kdataset.cpp  kdataset.h  kexpression.cpp  kexpression.h  klayer.cpp  klayer.h  kmodel.cpp  kmodel.h  kmodel_instance.cpp  kmodel_instance.h  knetwork.cpp  knetwork.h  koptimizer.cpp  koptimizer.h
kai/kai_engine/src/exec/: callback.cpp  callback.h  exec_context.cpp  exec_context.h  expr_graph.cpp  expr_graph.h
kai/kai_engine/src/gpu_cuda/: cuda_manager.cpp  cuda_manager.h  device_manager.cpp  device_manager.h  kai_kernels.cu  kai_kernels.cuh
kai/kai_engine/src/include/: kai_api.h  kai_api_shell.h  kai_callback.h  kai_errors.h  kai_types.h  kai_value.hpp
kai/kai_engine/src/math/: karr_math.cpp  karr_math.h  karray.cpp  karray.h  kcudamath.cu  kcudamath.h  khostmath.cpp  khostmath.h  kmath.cpp  kmath.h  kshape.cpp  kshape.h
kai/kai_engine/src/nightly/: findfirst.c  findfirst.h  nightly_utils.cpp  nightly_utils.h  path_generator.cpp  path_generator.h
kai/kai_engine/src/session/: callback_manager.h  kargs.cpp  kargs.h  kcommon.h  kvalue.cpp  session.cpp  session.h
kai/kai_engine/src/shell_temp/: session_shell.cpp
kai/kai_engine/src/utils/: kexception.cpp  kexception.h  klogger.cpp  klogger.h  kutil.cpp  kutil.h  kv_util.cpp  kv_util.h
kai/kai_engine/src2020/apps/: autoencoder.cpp  autoencoder.h  encdec.cpp  encdec.h  gan.cpp  gan.h
kai/kai_engine/src2020/core/: array.cpp  array.h  common.h  corpus.cpp  corpus.h  data_channel.cpp  data_channel.h  dataset.cpp  dataset.h  dim.cpp  dim.h  engine.cpp  engine.h  func_timer.cpp  func_timer.h  host_math.cpp  host_math.h  idx.cpp  idx.h  log.cpp  log.h  macro_pack.cpp  macro_pack.h  random.cpp  random.h  samples.cpp  samples.h  shape.cpp  shape.h  shell.cpp  shell.h  util.cpp  util.h  value.cpp  value.h
kai/kai_engine/src2020/cuda/: cuda_conn.cu  cuda_conn.cuh  cuda_kernels.cu  cuda_kernels.h  cuda_math.cu  cuda_math.h  cuda_note.cu  cuda_note.h  cuda_util.cu  cuda_util.cuh
kai/kai_engine/src2020/cuda/cuda_datasets/: cuda_dataset.cu  cuda_yolo.cu
kai/kai_engine/src2020/datasets/: abalone.cpp  abalone.h  automata.cpp  automata.h  bert.cpp  bert.h  cifar10_auto.cpp  cifar10_auto.h  coco.cpp  coco.h  dummy.cpp  dummy.h  flower.cpp  flower.h  gan_cifar10.cpp  gan_cifar10.h  mnist_auto.cpp  mnist_auto.h  mnist_encdec.cpp  mnist_encdec.h  mnist_gan.cpp  mnist_gan.h  office31.cpp  office31.h  pulsar.cpp  pulsar.h  steel.cpp  steel.h  test_dataset.cpp  test_dataset.h  urbansound.cpp  urbansound.h  videoshot.cpp  videoshot.h  word2vec.cpp  word2vec.h  word_seq.cpp  word_seq.h  yolo.cpp  yolo.h
kai/kai_engine/src2020/datasets/corpus/: korean_news.cpp  korean_news.h  ptb_corpus.cpp  ptb_corpus.h
kai/kai_engine/src2020/int_plugin/: internal_plugin.cpp  internal_plugin.h  layer.cu  layer.cuh  optimizer.cu  optimizer.cuh
kai/kai_engine/src2020/int_plugin/layers/: add_layer.cu  add_layer.cuh  attention_layer.cu  attention_layer.cuh  batch_norm_layer.cu  batch_norm_layer.cuh  conv_layer.cu  conv_layer.cuh  custom_layer.cu  custom_layer.cuh  deconv_layer.cu  deconv_layer.cuh  dropout_layer.cu  dropout_layer.cuh  embed_layer.cu  embed_layer.cuh  embedding_layer.cu  embedding_layer.cuh  expand_layer.cu  expand_layer.cuh  extract_layer.cu  extract_layer.cuh  full_layer.cu  full_layer.cuh  merge_layer.cu  merge_layer.cuh  noise_layer.cu  noise_layer.cuh  parallel_layer.cu  parallel_layer.cuh  pass_layer.cu  pass_layer.cuh  pool_layer.cu  pool_layer.cuh  reshape_layer.cu  reshape_layer.cuh  rnn_layer.cu  rnn_layer.cuh  serial_layer.cu  serial_layer.cuh
kai/kai_engine/src2020/int_plugin/optimizers/: adam_optimizer.cu  adam_optimizer.cuh  new_optimizer.cu  new_optimizer.cuh  sgd_optimizer.cu  sgd_optimizer.cuh
kai/kai_engine/src2020/server/: client_service.cpp  client_service.h  connect.cpp  connect.h
kai/kai_engine/src2020/utils/: news_reformer.cpp  news_reformer.h  test.cpp  test.h
kai/kai_shell/: CMakeLists.txt  kai_shell.vcxproj  kai_shell.vcxproj.filters
kai/kai_shell/src/: common.h  data_feeder.cpp  data_feeder.h  kai_shell.cpp  kai_shell.h  mission.cpp  mission.h  mission.h-1  reporter.cpp  reporter.h
kai/kai_shell/src/data_feeders/: bert_feeder.cpp  bert_feeder.h  csv_feeder.cpp  csv_feeder.h  folder_class_feeder.cpp  folder_class_feeder.h  mnist_reader_feeder.cpp  mnist_reader_feeder.h  urban_feeder.cpp  urban_feeder.h  yolo3_feeder.cpp  yolo3_feeder.h
kai/kai_shell/src/missions/: abalone.c-1  abalone.cpp  abalone.h  bert.cpp  bert.h  flower.cpp  flower.h  mnist_reader.cpp  mnist_reader.h  office31.cpp  office31.h  pulsar.cpp  pulsar.h  scene_text_detect.cpp  scene_text_detect.h  steel.cpp  steel.h  urban.cpp  urban.h  water.cpp  water.h  yolo3.cpp  yolo3.h
kai/kai_shell/src/reporters/: abalone_reporter.cpp  abalone_reporter.h  bert_reporter.cpp  bert_reporter.h  binary_reporter.cpp  binary_reporter.h  mnist_reader_reporter.cpp  mnist_reader_reporter.h  office31_reporter.cpp  office31_reporter.h  select_reporter.cpp  select_reporter.h  steel_reporter.cpp  yolo3_reporter.cpp  yolo3_reporter.h
kai/kai_shell/src/utils/: json_parser.cpp  json_parser.h  kvalue_ext.cpp  kvalue_ext.h  utils.cpp  utils.h
kai/kai_test/: CMakeLists.txt
kai/kai_test/src/test1/: test_kai_array.cpp  test_kai_value.cpp
work/: README.md
